--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2> Resultados: </h2>
     <button>Click </button>
     <input type="text">
-    <script src='js/main.js'></script>
+    <script src='main.js'></script>
    
 
 </body>
