--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="test.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Datos de nosotros</h1>
-    <h2> Resultados: </h2>
-    <button>Click </button>
-    <input type="text">
-    <script src='main.js'></script>
-   
+    <header></header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
 
+    
 </body>
 </html>
